--- a/pts-ui/package.json
+++ b/pts-ui/package.json
@@ -2,6 +2,7 @@
   "name": "pts-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/pts",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
